ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsgram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsgram
  template:
    metadata:
      labels:
        app: devopsgram
    spec:
      containers:
      - name: devopsgram-container
        image: felipeacezar/devopsgram
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: gitlab-registry-secret
