ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devopsgram-route
spec:
  to:
    kind: Service
    name: devopsgram-service
  port:
    targetPort: 5000
  tls:
    termination: edge
  wildcardPolicy: None
